--- a/docs/常用端口.md
+++ b/docs/常用端口.md
@@ -1,15 +1,21 @@
 
-#### angular 
-4200
+## 应用程序的默认端口
 
-#### mongodb
-27017
+#### 应用服务器
 
-#### arangodb
-8529
+tomcat 8080 
 
-#### neo4j
-7474
+#### 数据库
 
-#### redis
-6379
+mongodb 27017
+
+arangodb 8529
+
+neo4j 7474
+
+redis 6379
+
+#### javascript 框架
+
+angular 4200
+
