--- a/docs/收藏网址.md
+++ b/docs/收藏网址.md
@@ -3,3 +3,5 @@
 1. [The Twelve Factors](https://12factor.net/zh_cn/)
 
 2. [jade 使用说明](https://segmentfault.com/a/1190000000357534)
+
+3. [XML 命名空间](http://www.cnblogs.com/zhao1949/p/5652167.html)
