--- a/docs/收藏网址.md
+++ b/docs/收藏网址.md
@@ -5,3 +5,5 @@
 2. [jade 使用说明](https://segmentfault.com/a/1190000000357534)
 
 3. [XML 命名空间](http://www.cnblogs.com/zhao1949/p/5652167.html)
+
+4. [使用Travis进行持续集成](https://www.liaoxuefeng.com/article/0014631488240837e3633d3d180476cb684ba7c10fda6f6000)
