--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -104,7 +104,9 @@
 
 ## Node.js
 
-[jade 使用说明](https://segmentfault.com/a/1190000000357534)
+[jade 使用说明](https://segmentfault.com/a/1190000000357534)     
+[Environment Variables in Node.js](https://medium.com/@maxbeatty/environment-variables-in-node-js-28e951631801)     
+[How Redux Works: A Counter-Example](https://daveceddia.com/how-does-redux-work/)     
 
 ***
 
