--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -107,6 +107,8 @@
 [jade 使用说明](https://segmentfault.com/a/1190000000357534)     
 [Environment Variables in Node.js](https://medium.com/@maxbeatty/environment-variables-in-node-js-28e951631801)     
 [How Redux Works: A Counter-Example](https://daveceddia.com/how-does-redux-work/)     
+[React JS as an Ecosystem](https://medium.com/techtrument/reactjs-as-an-ecosystem-8d1ae90731f2)    
+[React Ecosystem Guide](https://itnext.io/react-ecosystem-guide-4a5f85d17623)     
 
 ***
 
