--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -177,6 +177,12 @@ Redis
 
 ***
 
+## react
+[Saga Middleware for Redux to Handle Side Effects](https://survivejs.com/blog/redux-saga-interview/)   
+
+
+***
+
 ## CSS
 
 [CSS Evolution: From CSS, SASS, BEM, CSS Modules to Styled Components](https://medium.com/@perezpriego7/css-evolution-from-css-sass-bem-css-modules-to-styled-components-d4c1da3a659b)     
