Update and rename 协议.md to 技术词汇.md

--- a/docs/技术词汇.md
+++ b/docs/技术词汇.md
@@ -16,3 +16,19 @@ STOMP是一个非常简单和容易实现的协议，其设计灵感源自于HTT
 AMQP，即 Advanced Message Queuing Protocol，高级消息队列协议是应用层协议的一个开放标准，为面向消息的中间件设计。消息中间件主要用于组件之间的解耦，消息的发送者无需知道消息使用者的存在，反之亦然。AMQP 的主要特征是面向消息、队列和路由，可靠且安全。
 
 ***
+
+#### Thunk
+A thunk is a function that wraps an expression to delay its evaluation.
+```javascript
+// 1 + 2 立即被计算 = 3
+let x = 1 + 2;
+
+// 1 + 2 被封装在了 foo 函数内
+// foo 可以被延迟执行
+// foo 就是一个 thunk 
+let foo = () => 1 + 2;
+```
+
+***
+
+
