--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -109,6 +109,8 @@
 [How Redux Works: A Counter-Example](https://daveceddia.com/how-does-redux-work/)     
 [React JS as an Ecosystem](https://medium.com/techtrument/reactjs-as-an-ecosystem-8d1ae90731f2)    
 [React Ecosystem Guide](https://itnext.io/react-ecosystem-guide-4a5f85d17623)     
+[Using CORS in Express](https://medium.com/@alexishevia/using-cors-in-express-cac7e29b005b)      
+
 
 ***
 
