--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -205,3 +205,5 @@ Redis
 [XML 命名空间](http://www.cnblogs.com/zhao1949/p/5652167.html)  
 [S.O.L.I.D：面向对象设计的头 5 大原则](http://blog.jobbole.com/86267/)  
 [面向对象设计原则和创建SOLID应用的5个方法](http://www.importnew.com/10656.html)
+[如何选择开源许可证？](http://www.ruanyifeng.com/blog/2011/05/how_to_choose_free_software_licenses.html)     
+
