--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -16,7 +16,16 @@
 [Java 8简明教程](http://www.importnew.com/10360.html)  
 [Java 的 23 种设计模式全解析](http://www.cnblogs.com/geek6/p/3951677.html)  
 [JDK 5.0 中更灵活、更具可伸缩性的锁定机制](https://www.ibm.com/developerworks/cn/java/j-jtp10264/index.html?ca=drs-)  
-[弱引用和软引用](https://zhuanlan.zhihu.com/p/29415902)
+[弱引用和软引用](https://zhuanlan.zhihu.com/p/29415902)        
+[JDK 7 中的 Fork/Join 模式](https://www.ibm.com/developerworks/cn/java/j-lo-forkjoin/)       
+[Java 8 中的 Streams API 详解](https://www.ibm.com/developerworks/cn/java/j-lo-java8streamapi/)        
+[Everything about Java 8](https://www.techempower.com/blog/2013/03/26/everything-about-java-8/)       
+[State of the Lambda](http://cr.openjdk.java.net/~briangoetz/lambda/lambda-state-final.html)       
+[State of the Lambda: Libraries Edition](http://cr.openjdk.java.net/~briangoetz/lambda/lambda-libraries-final.html)      
+[Translation of Lambda Expressions](http://cr.openjdk.java.net/~briangoetz/lambda/lambda-translation.html)      
+[使用 Java8 Optional 的正确姿势](http://www.importnew.com/22060.html)         
+[Java8 如何正确使用 Optional](http://www.importnew.com/26066.html)       
+[Lesson: Classes and Objects](https://docs.oracle.com/javase/tutorial/java/javaOO/index.html)     
 
 #### JVM
 [.class 文件结构说明](http://www.cnblogs.com/ivantang/p/6236711.html)  
