--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -111,6 +111,13 @@
 
 ***
 
+## Javascript
+
+[JavaScript Promise API](https://davidwalsh.name/promises)      
+
+
+***
+
 ## Node.js
 
 [jade 使用说明](https://segmentfault.com/a/1190000000357534)     
