--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -11,6 +11,7 @@
 
 ## Java
 
+[Java Language and Virtual Machine Specifications](https://docs.oracle.com/javase/specs/)      
 [OpenJDK：是时候替换JDK了么？](http://www.importnew.com/18308.html)  
 [java 调试技能之 dubbo 调试 — telnet](http://www.importnew.com/24896.html)  
 [Java 8简明教程](http://www.importnew.com/10360.html)  
