--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -45,7 +45,7 @@
 [JVM 堆内存和非堆内存](http://www.importnew.com/27645.html)   
 [探究 Java 虚拟机栈](http://www.importnew.com/26842.html)  
 [一点一滴探究 JVM 之内存结构](http://www.importnew.com/27454.html)   
-
+[How JVM Works – JVM Architecture?](https://www.geeksforgeeks.org/jvm-works-jvm-architecture/)  
 
 
 #### Spring
@@ -149,6 +149,10 @@
 [我常用的 Python 调试工具](http://blog.jobbole.com/51062/)   
 [Python 性能分析入门指南](http://blog.jobbole.com/74266/)  
 [Python超级程序员使用的开发工具](http://blog.jobbole.com/59000/)   
+[Python Numpy Tutorial](https://cs231n.github.io/python-numpy-tutorial/) 
+[Welcome to use python documentation](https://use-python.readthedocs.io/zh_CN/latest/)     
+[The Hitchhiker’s Guide to Python](https://docs.python-guide.org/)    
+[A Byte of Python](https://python.swaroopch.com/)  
 
 ## Docker
 
@@ -223,4 +227,6 @@ Redis
 [S.O.L.I.D：面向对象设计的头 5 大原则](http://blog.jobbole.com/86267/)  
 [面向对象设计原则和创建SOLID应用的5个方法](http://www.importnew.com/10656.html)      
 [如何选择开源许可证？](http://www.ruanyifeng.com/blog/2011/05/how_to_choose_free_software_licenses.html)     
+[Unicode字符参考](https://zh.wikibooks.org/wiki/Unicode/%E5%AD%97%E7%AC%A6%E5%8F%82%E8%80%83/A000-AFFF)    
+
 
