--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -153,6 +153,8 @@
 [Welcome to use python documentation](https://use-python.readthedocs.io/zh_CN/latest/)     
 [The Hitchhiker’s Guide to Python](https://docs.python-guide.org/)    
 [A Byte of Python](https://python.swaroopch.com/)  
+[Python 3 文档](https://docspy3zh.readthedocs.io/en/latest/)    
+
 
 ## Docker
 
