--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -148,12 +148,16 @@
 [Python自省（反射）指南](http://www.cnblogs.com/huxi/archive/2011/01/02/1924317.html)    
 [我常用的 Python 调试工具](http://blog.jobbole.com/51062/)   
 [Python 性能分析入门指南](http://blog.jobbole.com/74266/)  
-[Python超级程序员使用的开发工具](http://blog.jobbole.com/59000/)   
-[Python Numpy Tutorial](https://cs231n.github.io/python-numpy-tutorial/) 
+[Python超级程序员使用的开发工具](http://blog.jobbole.com/59000/)     
+[Python Numpy Tutorial](https://cs231n.github.io/python-numpy-tutorial/)     
 [Welcome to use python documentation](https://use-python.readthedocs.io/zh_CN/latest/)     
 [The Hitchhiker’s Guide to Python](https://docs.python-guide.org/)    
 [A Byte of Python](https://python.swaroopch.com/)  
-[Python 3 文档](https://docspy3zh.readthedocs.io/en/latest/)    
+[Python 3 文档](https://docspy3zh.readthedocs.io/en/latest/)     
+[Practical Emacs Tutorial](http://ergoemacs.org/emacs/emacs.html)     
+[The Best Python Editor](https://realpython.com/emacs-the-best-python-editor/)     
+[VIM and Python – A Match Made in Heaven](https://realpython.com/vim-and-python-a-match-made-in-heaven/)      
+[Vim与Python真乃天作之合](http://codingpy.com/article/vim-and-python-match-in-heaven/)      
 
 
 ## Docker
