--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -134,9 +134,22 @@
 ***
 
 ## Python
+### python 工具配置
+[将Sublime Text 3打造成强大的Python开发环境](http://python.jobbole.com/81312/)    
+[VIM and Python – A Match Made in Heaven](https://realpython.com/vim-and-python-a-match-made-in-heaven/)      
+[Vim与Python真乃天作之合](http://codingpy.com/article/vim-and-python-match-in-heaven/)        
+[The Best Python Editor](https://realpython.com/emacs-the-best-python-editor/)   
 
-[将Sublime Text 3打造成强大的Python开发环境](http://python.jobbole.com/81312/)  
+### python 语法
 [简明 Python 教程](https://woodpecker.org.cn/abyteofpython_cn/chinese/index.html)   
+[Google's Python Class(FQ)](https://developers.google.com/edu/python/?hl=zh-CN)    
+[Python 3 文档](https://docspy3zh.readthedocs.io/en/latest/)     
+[Python Numpy Tutorial](https://cs231n.github.io/python-numpy-tutorial/)     
+[Welcome to use python documentation](https://use-python.readthedocs.io/zh_CN/latest/)     
+[The Hitchhiker’s Guide to Python](https://docs.python-guide.org/)    
+[A Byte of Python](https://python.swaroopch.com/)  
+
+### python 使用
 [Python爬虫入门（1）：综述](http://python.jobbole.com/81332/)   
 [Python爬虫入门（2）：爬虫基础了解](http://python.jobbole.com/81334/)   
 [Python爬虫入门（3）：Urllib库的基本使用](http://python.jobbole.com/81336/)   
@@ -149,15 +162,6 @@
 [我常用的 Python 调试工具](http://blog.jobbole.com/51062/)   
 [Python 性能分析入门指南](http://blog.jobbole.com/74266/)  
 [Python超级程序员使用的开发工具](http://blog.jobbole.com/59000/)     
-[Python Numpy Tutorial](https://cs231n.github.io/python-numpy-tutorial/)     
-[Welcome to use python documentation](https://use-python.readthedocs.io/zh_CN/latest/)     
-[The Hitchhiker’s Guide to Python](https://docs.python-guide.org/)    
-[A Byte of Python](https://python.swaroopch.com/)  
-[Python 3 文档](https://docspy3zh.readthedocs.io/en/latest/)     
-[Practical Emacs Tutorial](http://ergoemacs.org/emacs/emacs.html)     
-[The Best Python Editor](https://realpython.com/emacs-the-best-python-editor/)     
-[VIM and Python – A Match Made in Heaven](https://realpython.com/vim-and-python-a-match-made-in-heaven/)      
-[Vim与Python真乃天作之合](http://codingpy.com/article/vim-and-python-match-in-heaven/)      
 
 
 ## Docker
@@ -226,6 +230,7 @@ Redis
 
 
 ## 其他  
+[Practical Emacs Tutorial](http://ergoemacs.org/emacs/emacs.html)       
 [清华大学开源软件镜像站](https://mirrors.tuna.tsinghua.edu.cn/)  
 [The Twelve Factors](https://12factor.net/zh_cn/)  
 [使用Travis进行持续集成](https://www.liaoxuefeng.com/article/0014631488240837e3633d3d180476cb684ba7c10fda6f6000)  
