--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -1,6 +1,6 @@
 
 
-## Excellet tech blogs
+## Tech blogs
 [How to do in java(Lokesh Gupta)](https://howtodoinjava.com/)     
 [David Walsh Blog - JavaScript Consultant](https://davidwalsh.name/)    
 [How To Install Iptables Firewall In CentOS 7 Linux](https://www.rootusers.com/how-to-install-iptables-firewall-in-centos-7-linux/)     
