--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -147,7 +147,8 @@
 [Python Numpy Tutorial](https://cs231n.github.io/python-numpy-tutorial/)     
 [Welcome to use python documentation](https://use-python.readthedocs.io/zh_CN/latest/)     
 [The Hitchhiker’s Guide to Python](https://docs.python-guide.org/)    
-[A Byte of Python](https://python.swaroopch.com/)  
+[A Byte of Python](https://python.swaroopch.com/)    
+[Python Getting Started and Basics](https://www3.ntu.edu.sg/home/ehchua/programming/webprogramming/Python1_Basics.html)     
 
 ### python 使用
 [Python爬虫入门（1）：综述](http://python.jobbole.com/81332/)   
