--- a/docs/技术词汇.md
+++ b/docs/技术词汇.md
@@ -29,6 +29,7 @@ let x = 1 + 2;
 let foo = () => 1 + 2;
 ```
 
+绿茶性凉，清热，提神，绿茶还用于头痛，目昏，多睡，思维不清，心烦口渴，食积痰滞，痢疾，小便不利。并有降血脂，抗衰老，防癌，坚固牙齿，美丽容颜之功效。红茶性温，去寒，暖胃，红茶还可以帮助胃肠消化、促进食欲，可利尿、消除水肿，并强壮心脏功能。
 ***
 
 
