--- a/docs/技术栈.md
+++ b/docs/技术栈.md
@@ -209,6 +209,8 @@ Redis
 [S.O.L.I.D：面向对象设计的头 5 大原则](http://blog.jobbole.com/86267/)  
 [面向对象设计原则和创建SOLID应用的5个方法](http://www.importnew.com/10656.html)      
 [如何选择开源许可证？](http://www.ruanyifeng.com/blog/2011/05/how_to_choose_free_software_licenses.html)     
-[Unicode字符参考](https://zh.wikibooks.org/wiki/Unicode/%E5%AD%97%E7%AC%A6%E5%8F%82%E8%80%83/A000-AFFF)    
+[Unicode字符参考](https://zh.wikibooks.org/wiki/Unicode/%E5%AD%97%E7%AC%A6%E5%8F%82%E8%80%83/A000-AFFF)      
+[Logo Software and Hardware](https://el.media.mit.edu/logo-foundation/resources/software_hardware.html)      
+[MSWLogo](http://www.softronix.com/logo.html)      
 
 
